build(RhinoHandlers): update project references and add ModelEditorSDK
- Add ModelEditorSDK package reference version 2.6.2
- Update PollinationSDK project reference to point to CSharpSDK
- Improve formatting of csproj file

--- a/src/Pollination.RhinoHandlers/Pollination.RhinoHandlers.csproj
+++ b/src/Pollination.RhinoHandlers/Pollination.RhinoHandlers.csproj
@@ -16,8 +16,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HoneybeeSchema" Version="*"/>
-		<ProjectReference Include="..\..\..\rhino-plugin-core\src\Pollination.Core\Pollination.Core.csproj"/>
-		<ProjectReference Include="..\..\..\pollinationSDK\src\PollinationSDK\PollinationSDK.csproj"/>
+		<PackageReference Include="HoneybeeSchema" Version="*" />
+		<PackageReference Include="ModelEditorSDK" Version="2.6.2" />
+		<ProjectReference Include="..\..\..\rhino-plugin-core\src\Pollination.Core\Pollination.Core.csproj" />
+		<ProjectReference Include="..\..\..\pollinationSDK\src\CSharpSDK\PollinationSDK.csproj" />
 	</ItemGroup>
 </Project>
