--- a/src/Pollination.RhinoHandlers/Pollination.RhinoHandlers.csproj
+++ b/src/Pollination.RhinoHandlers/Pollination.RhinoHandlers.csproj
@@ -17,7 +17,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="HoneybeeSchema" Version="*" />
-		<PackageReference Include="ModelEditorSDK" Version="2.6.2" />
+		<PackageReference Include="ModelEditorSDK" Version="*" />
 		<ProjectReference Include="..\..\..\rhino-plugin-core\src\Pollination.Core\Pollination.Core.csproj" />
 		<ProjectReference Include="..\..\..\pollinationSDK\src\CSharpSDK\PollinationSDK.csproj" />
 	</ItemGroup>
